# Blackjack_AI

./: CMakeLists.txt  README.md  blackjack 1.5.cpp  blackjack 1.5.h  blackjack 1.cpp  blackjack.cpp  blackjack.h  blackjack1.h  main.cpp
Game/: blackjack.cpp  blackjack.h  main.cpp
web/: server.txt
